Add config file and add it to .gitignore
Some configs should be kept secret and excluted from the repository, for example map token.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# Configs that shoud be kept secret from repo
+src/environments/config.ts
+src/environments/config.prod.ts
