--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/service-worker": "^6.0.3",
     "core-js": "^2.5.4",
     "leaflet": "^1.3.1",
+    "material-community-components": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
